--- a/.env
+++ b/.env
@@ -1,12 +1,19 @@
-APP_NAME=LaravelInsecurePassword
+APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+APP_KEY=base64:kcFKkdukjtm+r/ORPbZNEKAsvP2O7Sm420imfUq+FQ0=
 APP_DEBUG=true
-APP_URL=http://localhost:8880
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
+
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=laravel
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -44,6 +51,7 @@ PUSHER_PORT=443
 PUSHER_SCHEME=https
 PUSHER_APP_CLUSTER=mt1
 
+VITE_APP_NAME="${APP_NAME}"
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
